2.0.4.0
- EVOL: all(ymls/conf/response content) is converted to utf8 str
2.0.3.0
- FIX: dyn params can be transformed now, and can be bytes
2.0.2.0
- FIX: override headers with None/null to remove it
2.0.1.0
- FIX: replaying works now when switchs declare a BEGIN/END
2.0.0.0
- full rewrite from scratch + new features

1.4.4.0 (02/07/2019)
 - FIX: replacing doc was bugged in some complex cases
1.4.3.0 (01/07/2019)
 - better release (pytest zzz_OldTest are ok now)
1.4.2.0 (01/07/2019)
 - doc is replacable (can embed vars)
1.4.1.0 (01/07/2019)
 - FIX: "server is down" & CTRL-C exception handling in async (pytest zzz_OldTest are flaky)
1.4.0.0 (10/06/2019)
 - use httpcore 0.4.0
1.3.2.3 BETA: (4/06/2019)
 - require httpcore==0.3.0
1.3.2.2 BETA: (28/05/2019)
 - better cookiestore
1.3.2.1 BETA: (28/05/2019)
 - FIX: parallelizm with begin/end
1.3.1.1 BETA: (27/05/2019)
 - console output: better display in parallelism mode
1.3.1.0 BETA: (27/05/2019)
 - cookies are stored in env, so parallelism works as excpected (each file has his cookiejar)
1.3.0.2 BETA: (27/05/2019)
 - fix: env are cloned when parallelizm
 - fix: req.info status_code is now a real int
1.3.0.1 BETA: (27/05/2019)
 - fix: request was broken for some type of body
1.3.0.0 BETA: (26/05/2019) "httpcore version 0.3.0"
 - use Tom Christie's httpcore 0.3.0 (for sync/async features)
 - option --p for parallelism files
 - reqman as a module : now a COROUTINE (reqman.testContent( yml: str, env: {}) -> MainReponse)
 - FIX: header's values are stringified now
1.2.0.0: (22/05/2019)
 - reqman as a module : now a simple reqman.testContent( yml: str, env: {}) -> MainReponse
1.1.8.0: (18/05/2019)
 - html escape test name
 - display doc line under the test for the reqman.html
1.1.7.0: (18/05/2019)
 - module.main now returns something that is usefull when used as a lib
1.1.6.0: (17/05/2019)
 - better handle NonPlayable test (coz unresolved params) .. should be ok now !
1.1.5.0: (16/05/2019)