@@ -1,6 +1,5 @@
 import reqman,pytest,sys,os
 
-
 mock = {
   "http://a/start":(200,"ok"),
   "http://b/start":(200,"ok"),
@@ -28,6 +27,8 @@ def _continue(exe):
     assert len(lrmr)==1
     os.unlink("reqman.conf")
     os.unlink("f.yml")
+    # x.view()
+
 
     x=exe(lrmr[0],"--o:r1.html",fakeServer=mock) # rebuild HTML from a rmr -> single result
     assert "http://a/hello" not in x.console # because nothing is replayed
@@ -55,7 +56,6 @@ def _continue(exe):
     assert x.rc==0
     assert os.path.isfile("r4.html")
     assert x.console.count("content contains")==1
-
 
 def test_COMMAND_rmr_tests_old_switchs(exe):   #<- it's not a real test ... just COPY/PASTE this one for next tests
 
