@@ -43,3 +43,38 @@ tests:
         
     x=exe(".",fakeServer=MOCK)
     assert x.rc == 0
+    # x.view()
+
+def test_diff_encoding_with_rconf(exe): 
+    y="""
+GET: https://www.manatlan.com/cp1252
+tests:
+    - content: <<val>>
+"""
+
+    with open("f.yml","w+") as fid:
+        fid.write(y)
+
+    with open("reqman.conf","w+") as fid:
+        fid.write("""val: oké""")
+        
+    x=exe(".",fakeServer=MOCK)
+    assert x.rc == 0
+    # x.view()
+
+def test_diff_encoding_with_rconf2(exe): 
+    y="""
+GET: https://www.manatlan.com/utf8
+tests:
+    - content: <<val>>
+""".encode().decode("cp1252")
+
+    with open("f.yml","w+") as fid:
+        fid.write(y)
+
+    with open("reqman.conf","w+") as fid:
+        fid.write("""val: oké""".encode().decode("cp1252"))
+        
+    x=exe(".",fakeServer=MOCK)
+    assert x.rc == 0
+    # x.view()
